# njvm

./: .gitignore  CMakeLists.txt  HelloWorld.java  README.md  common.h  constants.h  info.h  interpreter.cpp  jit.cpp  main.cpp  njit.cpp  njvm.cpp  reader.cpp
